# manager/src/scheduler/dto/create-scheduler.dto.ts
@@ -1,0 +1,1 @@
+export class CreateSchedulerDto {}
