# manager/src/scheduler/dto/update-scheduler.dto.ts
@@ -1,0 +1,4 @@
+import { PartialType } from '@nestjs/swagger';
+import { CreateSchedulerDto } from './create-scheduler.dto';
+
+export class UpdateSchedulerDto extends PartialType(CreateSchedulerDto) {}
