# manager/src/scheduler/entities/scheduler.entity.ts
@@ -1,0 +1,1 @@
+export class Scheduler {}
